--- a/templates/dangerzone.html
+++ b/templates/dangerzone.html
@@ -31,6 +31,8 @@
         <div class="danger-field"><label>{% trans "Delete All Shachariot"%}</label><button class="btn btn-danger" onclick="showModal('delete-shachariot','Delete Shachariot')">
             {% trans "Delete All Shachariot" %}</button></div>
         <div class="danger-field"><label>{% trans "Delete All Classes"%}</label><button class="btn btn-danger" onclick="showModal('delete-classes','Delete Classes')">{% trans "Delete All Classes"%}</button></div>
+    <div class="danger-field"><label>{% trans "Delete All Students"%}</label><button class="btn btn-danger" onclick="showModal('delete-students','Delete Students')">{% trans "Delete All Students"%}</button></div>
+
     </div>
 <script>
     const form = document.getElementById("form")
