--- a/templates/import_page.html
+++ b/templates/import_page.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% block title %}{% trans "Import" %}{% endblock %}
 {% block content %}
 <div class="container">
     <h4>{% trans "Import Students From CSV" %}</h4>
