--- a/templates/class_manager.html
+++ b/templates/class_manager.html
@@ -241,8 +241,14 @@ button:dir(ltr),.button-div:dir(ltr){
     <div   style="display:flex;flex-direction: row">
 
         <p class="class-name"> {{ class }} -  {{ values.0 }} {% trans "Students" %}</p>
+        {% if values.0 > 0 %}
         <p style="display: inline" hx-get="{% url 'get_student_list' values.1 %}" hx-target="next .details" id="arrow" ><i class="arrow down"></i></p>
         <button style="margin: 0" hx-on::after-request="document.getElementById('DescriptionModal').style.display = 'block'" hx-get="{% url "editDescription" %}" name="id" value="{{ values.1 }}" hx-target="#inner-form" class="btn btn-info">{% trans "Change Description" %}</button>
+        {% else %}
+            <button  hx-on::after-request="document.getElementById('DescriptionModal').style.display = 'block'" hx-get="{% url "editDescription" %}" name="id" value="{{ values.1 }}" hx-target="#inner-form" class="btn btn-info">{% trans "Change Description" %}</button>
+
+        {% endif %}
+
         </div>
                 <div class="details"></div>
 
@@ -307,17 +313,4 @@ function filterList() {
     }
   }
     </script>
-    <script>
-
-  function copyToClipboard(a) {
-      a.style.display = "block"
-      const textToCopy = a.querySelector("#link").innerText; // or .textContent if you want to copy raw text
-      navigator.clipboard.writeText(textToCopy).then(function() {
-      alert('Copied to clipboard!');
-      a.style.display = "none"
-      }, function(err) {
-          console.error('Could not copy text: ', err);
-      });
-      }
-</script>
 {% endblock %}
