minor fixes, started adding an invite button for teachers

--- a/templates/teacher_home.html
+++ b/templates/teacher_home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% block static %}<link type="text/css" rel="stylesheet" href="{% static 'styles/teacher_home.css' %}">{% endblock %}
-{% block title %}{% trans "My Subs" %}{% endblock %}
+{% block title %}{% trans "Home" %}{% endblock %}
 {% block content %}
     <div id="myModal" class="modal">
 
