--- a/templates/teacher_manager.html
+++ b/templates/teacher_manager.html
@@ -67,12 +67,13 @@ h1:dir(rtl), p:dir(rtl){
 
         <p class="teacher-name"> {{ teacher }}</p>
         <form hx-trigger="change" hx-swap="none" hx-target=".form-fields" hx-post="{% url "teacher_manager" %}" class="button-div">
-            <div class="form-fields">{{ form }}
+            <div class="form-fields" style="font-size: smaller">{{ form }}
 </div>
 
         </form>
         {% if user.uuid != teacher.uuid %}
-                    <button hx-target="closest .teacher" hx-swap="delete" hx-post="{% url "teacher_manager"%}" name="Delete" value="{{ teacher.uuid }}" class="btn btn-danger">{% trans "Delete" %}</button>
+            <button class="btn btn-primary"  hx-post="{% url "invite_teacher" %}" name="teacher" value="{{ teacher.uuid }}">{% trans "Send Invite" %}</button>
+            <button hx-target="closest .teacher" hx-swap="delete" hx-post="{% url "teacher_manager"%}" name="Delete" value="{{ teacher.uuid }}" class="btn btn-danger">{% trans "Delete" %}</button>
         {% endif %}
         </div>
     </div>
