--- a/static/styles/order_laptops.css
+++ b/static/styles/order_laptops.css
@@ -1,23 +1,107 @@
-body,html{
-    margin: 0;
-    width: 100%;
-    height: 100%;
+.mother-container{
+    background: #fde7f0;
+    flex-grow:1 ;
+    border-radius: 25px;
 }
-body{
-    background-color: #311B92;
+h1{
+    color: #43122c;
+    margin:15px;
+}
+ul{
+    list-style-type: none;
+    margin:0;
+    padding: 0;
+}
+.hour,.date,.pin h2{
+    color: #47142f;
+    margin:0;
+}
+.date{
+    font-size:x-small;
+    font-weight: bolder;
+}
+.hour{
+    font-size: small;
+    font-weight: lighter;
+}
+.pin{
+    height: 6vh;
+    padding: 5px;
+    background: #fcc2d9;
+}
+.pin{
+    display: flex;
+}
+html *{
+    font-family: Inter, helvetica, sans-serif;
+
+}
+#add-button{
+    margin: auto;
+    border:none;
+    width:60px;
+    background:#fc9ac1;
+    border-radius: 15px;
+    height: 60px;
+    text-decoration: none !important;
+    font-family: helvetica, arial, sans-serif !important;
+}
+#add-button:hover{
+      background-color: #962964;
+}
+#add-button-container{
+    padding: 5px;
+    display: flex;
+    align-items: center;
+}
+ /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    margin:15% auto;
+    padding: 5px;
+    font-family: helvetica, arial, sans-serif;
+    display: block;
+    border: #55AD9B solid 3px;
+    background-color: #F1F8E8;
+    width: 15%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 form{
     display:flex;
-    background-color: #f3f3f3;
-    width: 50%;
     margin: auto;
     flex-direction: column;
-    gap: 5px;
+    gap: 15px;
 }
 form input[type=date],form input[type=number]{
     font-size: medium;
     border:none;
-    width: 80%;
     height: 7%;
     padding: 2% 3%;
     border-radius: 25px;
@@ -27,7 +111,6 @@ form button[type=submit]{
     background-color:#55AD9B;
     color: white;
     border:none;
-    width: 85%;
     height: 10%;
     padding: 2% 3%;
     border-radius: 25px;
