--- a/templates/first_time.html
+++ b/templates/first_time.html
@@ -3,7 +3,7 @@
 <head>
     {% load static %}
     {% load i18n %}
-    <link type="text/css" rel="stylesheet" href="{% static "styles/firsttime.css" %}">
+    <link type="text/css" rel="stylesheet" href="{% static "timetable/styles/firsttime.css" %}">
     <meta charset="UTF-8">
     <title>ClassCover</title>
 
