--- a/templates/publicBase.html
+++ b/templates/publicBase.html
@@ -8,8 +8,8 @@
 
     {% load static %}
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/stylesheet.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/index.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/stylesheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/index.css' %}">
     {% block static %}{% endblock %}
 
     <meta charset="UTF-8">
