--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -8,7 +8,7 @@
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/login_and_register.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/login_and_register.css' %}">
     <meta charset="UTF-8">
     <title>{% trans "Register" %}</title>
 </head>
@@ -46,7 +46,7 @@
   </form>
 </div>
 <div id="img-div">
-    <img src="{% static "img/register-image.png"%}">
+    <img src="{% static "timetable/img/register-image.png"%}">
 
 </div>
 </div>
