--- a/templates/setSub.html
+++ b/templates/setSub.html
@@ -16,6 +16,6 @@
 <h1>{% trans "No Classes To Sub" %}</h1>
 {% endif %}
 </div>
-    <script type="text/javascript" src="{% static 'setSub.js' %}"></script>
+    <script type="text/javascript" src="{% static 'timetable/setSub.js' %}"></script>
 {% endblock %}
 
