--- a/templates/student_manager.html
+++ b/templates/student_manager.html
@@ -2,8 +2,8 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{%  static 'styles/student_manager.css' %}">
-    <link rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{%  static 'timetable/styles/student_manager.css' %}">
+    <link rel="stylesheet" href="{% static "timetable/styles/bootstrap.min.css" %}">
 
 {% endblock %}
 {% block title %}{% trans "Manage Students" %}{% endblock %}
