--- a/templates/teacher_home.html
+++ b/templates/teacher_home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
-{% block static %}<link type="text/css" rel="stylesheet" href="{% static 'styles/teacher_home.css' %}">{% endblock %}
+{% block static %}<link type="text/css" rel="stylesheet" href="{% static 'timetable/styles/teacher_home.css' %}">{% endblock %}
 {% block title %}{% trans "Home" %}{% endblock %}
 {% block content %}
     <div id="myModal" class="modal">
