--- a/templates/teacher_manager.html
+++ b/templates/teacher_manager.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link type="text/css" rel="stylesheet" href="{% static "styles/bootstrap.min.css" %}">
+    <link type="text/css" rel="stylesheet" href="{% static "timetable/styles/bootstrap.min.css" %}">
     <style>
 .teacher-list{
     padding:0;
