--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
 <link rel="manifest" href="{% static 'manifest.json' %}">
-    <script src="{% static "scripts/htmx.min.js" %}"></script>
+    <script src="{% static "timetable/scripts/htmx.min.js" %}"></script>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/sidebar.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/stylesheet.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/sidebar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/stylesheet.css' %}">
     {% block static %}{% endblock %}
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %}</title>
