--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,7 @@
  {% load static %}
       <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'styles/login_and_register.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'timetable/styles/login_and_register.css' %}">
     <meta charset="UTF-8">
     <title>{% trans "Sign-in" %}</title>
 </head>
@@ -32,7 +32,7 @@
   </form>
 </div>
 <div id="img-div">
-    <img style="width: 100%;height: 100%" src="{% static "img/login-image.png"%}">
+    <img style="width: 100%;height: 100%" src="{% static "timetable/img/login-image.png"%}">
 
 </div>
 </div>
