--- a/templates/student_details.html
+++ b/templates/student_details.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% load i18n %}
-    <link rel="stylesheet" href="{% static 'styles/student_details.css' %}">
+    <link rel="stylesheet" href="{% static 'timetable/styles/student_details.css' %}">
 <html dir="{% trans "ltr" %}" lang="{% trans "en" %}">
 <div class="student_details">
     <div class="second-row">
