--- a/LaptopLoaning/templates/laptops_home.html
+++ b/LaptopLoaning/templates/laptops_home.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'laptopLoaning/styles/order_laptops.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'laptopLoaning/styles/laptops_stylesheet.css' %}">
     <title>{% trans "Order Laptops" %}</title>
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 </head>
@@ -22,6 +22,8 @@
 </form>
 </div>
 </div>
+<div class="container">
+<div class="menu"></div>
 <div class="mother-container">
     <h1>{% trans "My pins" %}</h1>
 
@@ -64,6 +66,6 @@
 <svg xmlns="http://www.w3.org/2000/svg" height="32" width="28" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#651c43" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>            </button>
             </li>
 </div>
-
+</div>
 </body>
 </html>
