--- a/static/laptopLoaning/styles/laptops_stylesheet.css
+++ b/static/laptopLoaning/styles/laptops_stylesheet.css
@@ -120,3 +120,6 @@ form button[type=submit]{
 form button[type=submit]:hover{
       background-color: #962964;
 }
+.container{
+    display: flex;
+}
