--- a/static/laptopLoaning/styles/laptops_stylesheet.css
+++ b/static/laptopLoaning/styles/laptops_stylesheet.css
@@ -1,3 +1,9 @@
+html,body{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
 .mother-container{
     background: #fde7f0;
     flex-grow:1 ;
@@ -95,7 +101,6 @@ html *{
 }
 form{
     display:flex;
-    margin: auto;
     flex-direction: column;
     gap: 15px;
 }
@@ -121,5 +126,11 @@ form button[type=submit]:hover{
       background-color: #962964;
 }
 .container{
+    height: 100%;
+    padding: 5px;
     display: flex;
+}
+td:dir(rtl),th:dir(rtl){
+    text-align: right;
+    direction: rtl;
 }
