--- a/LaptopLoaning/templates/laptops_home.html
+++ b/LaptopLoaning/templates/laptops_home.html
@@ -8,11 +8,15 @@
     <span onclick="this.parentElement.parentElement.style.display = 'none'" class="close">&times;</span>
 
     <form action="{% url "laptop_home" %}" method="post">
-    {% csrf_token %}
-    {% for field in form %}
-        {{ field }}
-    {% endfor %}
-    <button type="submit">{% trans "Order" %}</button>
+        {% csrf_token %}
+        {{ form.Teacher }}
+        {{ form.reason }}
+        {{ form.room }}
+        <p style="margin: 0">{% trans "Number of Laptops:" %} <span id="numberOfLaptops_value"></span></p>
+        {{ form.numberOfLaptops }}
+        {{ form.date }}
+        <div class="form-two-fields">{{ form.taking_time }}{{ form.returning_time }}</div>
+        <button type="submit">{% trans "Order" %}</button>
 </form>
 </div>
 </div>
@@ -30,8 +34,8 @@
             <div class="pin">
                 <div>
                 <h2>{{ pin.PIN }}</h2>
-                <h3 class="hour">{{ pin.date }}</h3>
-                <h3 class="hour">{{ pin.uses }}</h3>
+                <h3 class="hour">{{ pin.date }}. {{ pin.taking_time }} - {{ pin.returning_time }}</h3>
+                <h3 class="hour">{% trans "Remaining Uses: " %}{{ pin.uses }}</h3>
                 </div>
             </div>
         </li>
@@ -61,4 +65,19 @@
             </li>
 </div>
 </div>
+    <script>
+        const returning_time = document.getElementById("returning_time")
+        function setMin(a){
+            console.log("test")
+            returning_time.min = a.value
+        }
+        var slider = document.getElementById("id_numberOfLaptops");
+        var output = document.getElementById("numberOfLaptops_value");
+        output.innerHTML = slider.value; // Display the default slider value
+
+        // Update the current slider value (each time you drag the slider handle)
+        slider.oninput = function() {
+          output.innerHTML = this.value;
+        }
+    </script>
 {% endblock %}
