--- a/static/laptopLoaning/styles/laptops_stylesheet.css
+++ b/static/laptopLoaning/styles/laptops_stylesheet.css
@@ -76,7 +76,7 @@ html *{
 
 /* Modal Content/Box */
 .modal-content {
-    margin:15% auto;
+    margin:10%   auto auto;
     padding: 5px;
     font-family: helvetica, arial, sans-serif;
     display: block;
@@ -104,7 +104,7 @@ form{
     flex-direction: column;
     gap: 15px;
 }
-form input[type=date],form input[type=number],form select{
+form input[type=date],form input[type=number],form select,form input[type=time],form input[type=text]{
     font-size: medium;
     border:none;
     height: 7%;
@@ -139,4 +139,42 @@ td:dir(rtl),th:dir(rtl){
 }
 .btn{
     margin:0 !important;
+}
+.form-two-fields{
+    height: fit-content;
+    width: 100%;
+    display:flex;
+    flex-direction:row;
+    gap: 5px;
+}
+.form-two-fields input{
+    flex-grow: 1;
+}
+.graph-container{
+    display:flex
+}
+canvas{
+    width:50% !important;
+    height: 500px !important;
+  /*flex-shrink: 1!important;*/
+
+}
+.stats-container{
+    padding:10px;
+    display:flex;
+    gap:5px
+}
+.stat{
+    padding:5px;
+    height: 15vh;
+    border-radius: 5px;
+    box-shadow: lightgrey 5px 5px 5px ;
+    flex-grow: 1;
+    border: lightgrey 1px solid;
+    background: #f3f3f3;
+    color: #1b1e21;
+}
+.stat h1{
+    width: fit-content;
+    margin: 0;
 }
