--- a/LaptopLoaning/templates/statistics.html
+++ b/LaptopLoaning/templates/statistics.html
@@ -22,6 +22,9 @@
     </div>
 
 <script>
+    var isRightToLeft
+    if(document.dir === "rtl")
+        {isRightToLeft = true}
     const pins_per_teacher = JSON.parse('{{ pins_by_teacher|safe }}')
     const ctx = document.getElementById('myChart');
     const PinsPerMonthChart = document.getElementById('myChart2');
@@ -50,13 +53,17 @@
     },
     options: {
       responsive:true,
+      rtl:true,
       scales: {
         x: {
+            reverse: isRightToLeft ? true : false,
             stacked:true,
         },
         y: {
             stacked:true,
-            beginAtZero: true
+            beginAtZero: true,
+            position: isRightToLeft ? 'right' : 'left',
+
         }
       }
     }
@@ -76,13 +83,19 @@
       ]
     },
     options: {
+      rtl:true,
       scales: {
+        x: {
+          reverse: isRightToLeft ? true : false,
+        },
         y: {
-          beginAtZero: true
+          beginAtZero: true,
+          position: isRightToLeft ? 'right' : 'left',
         }
       }
     }
     });
+
 </script>
 
 
